--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -52,7 +52,7 @@
         <h2 class="text-center mb-4">Log in</h2>
         <form th:action="@{/auth/login}" method="post">
             <div class="mb-3">
-                <input type="email" class="form-control" placeholder="Email address" name="username" required>
+                <input type="email" class="form-control" placeholder="Email address" name="email" required>
             </div>
             <div class="mb-3">
                 <input type="password" class="form-control" placeholder="Password" name="password" required>
