--- a/src/main/resources/templates/member/mybook.html
+++ b/src/main/resources/templates/member/mybook.html
@@ -41,6 +41,7 @@
 </head>
 <body>
 <main layout:fragment="main" class="container mt-5">
+    [[${buyEBookDtoList}]]
     <div class="row justify-content-center">
         <div class="col-md-10">
             <nav>
